chore: add dependencies for test
kotest, junit, mockk