@@ -39,11 +39,20 @@ subprojects {
         implementation("org.springframework.boot:spring-boot-starter")
         implementation("org.springframework.boot:spring-boot-starter-web")
         implementation("org.jetbrains.kotlin:kotlin-reflect")
-        testImplementation("org.springframework.boot:spring-boot-starter-test")
         // mapping
         implementation("org.mapstruct:mapstruct:1.5.5.Final")
         annotationProcessor("org.mapstruct:mapstruct-processor:1.5.5.Final")
         kapt("org.mapstruct:mapstruct-processor:1.5.5.Final")
+
+        // test
+        testImplementation("org.springframework.boot:spring-boot-starter-test") {
+            exclude(group = "org.mockito", module = "mockito-core")
+        }
+        testImplementation("io.kotest:kotest-runner-junit5-jvm:5.9.1")
+        testImplementation("io.kotest:kotest-assertions-core-jvm:5.9.1")
+        testImplementation("io.kotest.extensions:kotest-extensions-spring:1.3.0")
+        testImplementation("io.mockk:mockk:1.13.13")
+        testImplementation("com.ninja-squad:springmockk:4.0.2")
     }
 
     tasks.bootJar { enabled = false }
@@ -57,6 +66,7 @@ subprojects {
     }
 
     tasks.withType<Test> {
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
         useJUnitPlatform()
     }
 }
